--- a/files/1_Python/0_variables.ipynb
+++ b/files/1_Python/0_variables.ipynb
@@ -7,7 +7,7 @@
     "id": "5bd539ce"
    },
    "source": [
-    "# Variables\n",
+    "# Variables et types\n",
     "\n",
     "## Affectation\n",
     "\n",
@@ -25,10 +25,10 @@
    "id": "0e3897bb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:55.975462Z",
-     "iopub.status.busy": "2021-08-23T16:07:55.973842Z",
-     "iopub.status.idle": "2021-08-23T16:07:55.980080Z",
-     "shell.execute_reply": "2021-08-23T16:07:55.978446Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.708316Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.707507Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.710609Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.709988Z"
     },
     "id": "46f4dfa5"
    },
@@ -56,10 +56,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:55.997834Z",
-     "iopub.status.busy": "2021-08-23T16:07:55.996231Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.009989Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.009200Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.719694Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.719160Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.721507Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.721946Z"
     },
     "id": "e61f2cb6",
     "outputId": "2a0c27e2-cc3e-49c4-dfca-dee8bacc03eb"
@@ -97,10 +97,10 @@
    "id": "2ca2763e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:56.014902Z",
-     "iopub.status.busy": "2021-08-23T16:07:56.014255Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.017944Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.017313Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.726614Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.724120Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.729215Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.728763Z"
     },
     "id": "9cfc31ae"
    },
@@ -146,10 +146,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:56.023282Z",
-     "iopub.status.busy": "2021-08-23T16:07:56.022744Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.025623Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.025171Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.737204Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.736252Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.739736Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.739165Z"
     },
     "id": "08972b4c",
     "outputId": "e7a9d247-843b-40e7-df78-a1a8b9a47920"
@@ -173,7 +173,11 @@
   {
    "cell_type": "markdown",
    "id": "6d6f2dba",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** Que valent $a$ et $b$ après avoir exécuté les lignes suivantes? Quel est l'intérêt de ce bout de code?"
    ]
@@ -184,10 +188,10 @@
    "id": "e96e346e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:56.029115Z",
-     "iopub.status.busy": "2021-08-23T16:07:56.028592Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.031138Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.030607Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.744759Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.743467Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.745271Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.745670Z"
     }
    },
    "outputs": [],
@@ -237,10 +241,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:56.034787Z",
-     "iopub.status.busy": "2021-08-23T16:07:56.034254Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.037143Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.036590Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.751457Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.750747Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.752551Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.752973Z"
     },
     "id": "83f7142e",
     "outputId": "16a56c2b-7928-44d3-83fd-c68c81e121d6"
@@ -296,10 +300,10 @@
    "id": "694812f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:56.040896Z",
-     "iopub.status.busy": "2021-08-23T16:07:56.040345Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.043568Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.043029Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.759242Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.755426Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.762343Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.761797Z"
     },
     "id": "ea5988f9"
    },
@@ -323,7 +327,10 @@
    "cell_type": "markdown",
    "id": "b1eb9090",
    "metadata": {
-    "id": "b95fa959"
+    "id": "b95fa959",
+    "tags": [
+     "exo"
+    ]
    },
    "source": [
     "**Exercice** : stocker dans une variable `nombre_or` la valeur (approximative) du nombre d'or $\\phi = \\frac{1 + \\sqrt{5}}{2}$\n"
@@ -340,7 +347,11 @@
   {
    "cell_type": "markdown",
    "id": "5c918175-b0e4-4a6a-9327-be830dc3dbaf",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : Calculer le quotient $q$ et le reste $r$ de la division euclidienne de 573 par 18. Vérifier que $573 = 18\\times q + r$."
    ]
@@ -361,7 +372,11 @@
   {
    "cell_type": "markdown",
    "id": "f467c059-840d-41b8-a1c7-15a13695120d",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : Est-ce que $86082823925$ est divisible par $179723$?"
    ]
@@ -395,10 +410,10 @@
    "id": "b9d6400f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:56.047420Z",
-     "iopub.status.busy": "2021-08-23T16:07:56.046875Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.050211Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.049645Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.768680Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.767581Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.771306Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.770325Z"
     }
    },
    "outputs": [
@@ -420,7 +435,11 @@
   {
    "cell_type": "markdown",
    "id": "c096e11c",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : Vérifier que le nombre d'or est compris entre 1 et 2."
    ]
@@ -446,10 +465,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:56.054122Z",
-     "iopub.status.busy": "2021-08-23T16:07:56.053588Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.056798Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.056254Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.775941Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.775315Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.778943Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.778484Z"
     },
     "id": "6LErgmRFyzUj",
     "outputId": "41852847-7763-4017-ad3b-d05087392eda"
@@ -476,10 +495,10 @@
    "id": "545bdf45",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:56.060383Z",
-     "iopub.status.busy": "2021-08-23T16:07:56.059855Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.063013Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.062475Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.783154Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.782627Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.785458Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.785037Z"
     },
     "id": "2ydfxnw4y7Ef"
    },
@@ -515,7 +534,9 @@
    "id": "435f2c9d",
    "metadata": {
     "id": "e114c39d",
-    "tags": []
+    "tags": [
+     "exo"
+    ]
    },
    "source": [
     "### Booléens\n",
@@ -555,10 +576,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:56.067017Z",
-     "iopub.status.busy": "2021-08-23T16:07:56.066501Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.069776Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.069281Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.790184Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.789680Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.793006Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.793476Z"
     },
     "id": "59a96c3b",
     "outputId": "eba4af7a-8bec-4510-b698-599392c7ff2a",
@@ -612,10 +633,10 @@
      "height": 212
     },
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:56.073578Z",
-     "iopub.status.busy": "2021-08-23T16:07:56.073040Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.120474Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.120186Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.797458Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.796874Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.842750Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.843150Z"
     },
     "id": "d1f0463f",
     "outputId": "3ba6fb3d-fe13-448c-8778-7c3d7a74fd10",
@@ -638,7 +659,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-c6afb006e58f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mL\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# donne 2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_161/733509920.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mL\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# donne 2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
@@ -668,10 +689,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:56.123231Z",
-     "iopub.status.busy": "2021-08-23T16:07:56.122877Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.124658Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.124952Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.847669Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.847182Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.849622Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.850017Z"
     },
     "id": "cfd2bd1b",
     "outputId": "dff1b3c4-d5f3-4b32-8928-dd05e45d675a"
@@ -712,10 +733,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:56.127308Z",
-     "iopub.status.busy": "2021-08-23T16:07:56.126985Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.129013Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.128643Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.854308Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.853779Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.855803Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.856173Z"
     },
     "id": "1fdcbfc5",
     "outputId": "b1337f9f-415b-4536-a190-e4ac98a799ce"
@@ -757,10 +778,10 @@
      "height": 246
     },
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:56.133199Z",
-     "iopub.status.busy": "2021-08-23T16:07:56.132872Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.135233Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.135510Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.863725Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.863193Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.866797Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.866394Z"
     },
     "id": "795daef3",
     "outputId": "68d2ddc3-0940-41fe-aa5b-97f7d0126222",
@@ -784,7 +805,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-0b34938a86e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# taille de s\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# caractère d'indice 2 (c'est à dire en 3ème position)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_161/2202273669.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# taille de s\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# caractère d'indice 2 (c'est à dire en 3ème position)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -819,10 +840,10 @@
      "height": 246
     },
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:56.139766Z",
-     "iopub.status.busy": "2021-08-23T16:07:56.139440Z",
-     "iopub.status.idle": "2021-08-23T16:07:56.141574Z",
-     "shell.execute_reply": "2021-08-23T16:07:56.141841Z"
+     "iopub.execute_input": "2021-11-12T18:50:35.870731Z",
+     "iopub.status.busy": "2021-11-12T18:50:35.870180Z",
+     "iopub.status.idle": "2021-11-12T18:50:35.876264Z",
+     "shell.execute_reply": "2021-11-12T18:50:35.876678Z"
     },
     "id": "54bf420a",
     "outputId": "9db04783-c3d3-428c-e6dc-bef5fd4ddb4c",
@@ -846,7 +867,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-ee0d1b431794>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# donne 3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# donne 4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m6\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un tuple\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un tuple\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_161/815575383.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# donne 3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# donne 4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m6\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un tuple\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un tuple\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
