--- a/files/1_Python/1_fonctions.ipynb
+++ b/files/1_Python/1_fonctions.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "31e1aa44",
+   "id": "1f109f9f",
    "metadata": {},
    "source": [
-    "# Définition de fonction\n",
+    "# Fonctions\n",
+    "\n",
+    "## Définition\n",
     "\n",
     "Voici un exemple de définition de fonction avec Python :"
    ]
@@ -13,13 +15,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1319082b",
+   "id": "b89ae14f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:59.530571Z",
-     "iopub.status.busy": "2021-08-23T16:07:59.528935Z",
-     "iopub.status.idle": "2021-08-23T16:07:59.535362Z",
-     "shell.execute_reply": "2021-08-23T16:07:59.533398Z"
+     "iopub.execute_input": "2021-11-12T18:50:37.986614Z",
+     "iopub.status.busy": "2021-11-12T18:50:37.986073Z",
+     "iopub.status.idle": "2021-11-12T18:50:37.994595Z",
+     "shell.execute_reply": "2021-11-12T18:50:37.995077Z"
     }
    },
    "outputs": [],
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9f900eb",
+   "id": "ad1fd4e9",
    "metadata": {},
    "source": [
     "- `f` est le **nom** de la fonction\n",
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89d3e3bb",
+   "id": "e12650eb",
    "metadata": {},
    "source": [
     "On utilise une fonction en écrivant son nom suivi d'une valeur pour ses arguments (on dit qu'on **appelle** `f`) :"
@@ -51,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4baaad07",
+   "id": "c18fdda0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:59.552442Z",
-     "iopub.status.busy": "2021-08-23T16:07:59.547024Z",
-     "iopub.status.idle": "2021-08-23T16:07:59.565488Z",
-     "shell.execute_reply": "2021-08-23T16:07:59.564365Z"
+     "iopub.execute_input": "2021-11-12T18:50:38.004852Z",
+     "iopub.status.busy": "2021-11-12T18:50:38.002544Z",
+     "iopub.status.idle": "2021-11-12T18:50:38.007647Z",
+     "shell.execute_reply": "2021-11-12T18:50:38.008043Z"
     }
    },
    "outputs": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb8b0ded",
+   "id": "2d839e20",
    "metadata": {},
    "source": [
     "La variable `x` dans `f` est **locale** : elle n'existe que dans `f` et ne peut pas être utilisée/modifiée en dehors. Par exemple :"
@@ -87,13 +89,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "726d4ddd",
+   "id": "76d000ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:59.574517Z",
-     "iopub.status.busy": "2021-08-23T16:07:59.573467Z",
-     "iopub.status.idle": "2021-08-23T16:07:59.632686Z",
-     "shell.execute_reply": "2021-08-23T16:07:59.632391Z"
+     "iopub.execute_input": "2021-11-12T18:50:38.012405Z",
+     "iopub.status.busy": "2021-11-12T18:50:38.011748Z",
+     "iopub.status.idle": "2021-11-12T18:50:38.056243Z",
+     "shell.execute_reply": "2021-11-12T18:50:38.055810Z"
     }
    },
    "outputs": [
@@ -104,7 +106,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-eb071cb97589>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# x n'existe qu'à l'intérieur de f, il ne faut pas essayer de l'utiliser en dehors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_191/3732946723.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# x n'existe qu'à l'intérieur de f, il ne faut pas essayer de l'utiliser en dehors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
      ]
     }
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbea5a4f",
+   "id": "5d0bcfbe",
    "metadata": {},
    "source": [
     "La variable `x` dans `f` est **muette** : de la même façon que la fonction mathématiques $f : x \\longmapsto 2x$ est équivalente à $f : y \\longmapsto 2y$, la fonction `f` ci-dessous est parfaitement équivalente à :"
@@ -127,13 +129,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fde12cb2",
+   "id": "ba3112f4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:59.635353Z",
-     "iopub.status.busy": "2021-08-23T16:07:59.635029Z",
-     "iopub.status.idle": "2021-08-23T16:07:59.636895Z",
-     "shell.execute_reply": "2021-08-23T16:07:59.636514Z"
+     "iopub.execute_input": "2021-11-12T18:50:38.061098Z",
+     "iopub.status.busy": "2021-11-12T18:50:38.059768Z",
+     "iopub.status.idle": "2021-11-12T18:50:38.061654Z",
+     "shell.execute_reply": "2021-11-12T18:50:38.062213Z"
     }
    },
    "outputs": [],
@@ -144,33 +146,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aea9592d",
-   "metadata": {},
+   "id": "05b7ca79",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
-    "**Exercice 1**\n",
+    "**Exercice**\n",
     "1. Définir la fonction $g : z \\longmapsto \\sqrt z(z^2-1)$ en Python.\n",
     "2. Vérifier que $g(4) = 30$.\n",
-    "3. En réutilisant `g`, définir $h : x \\longmapsto 3z + \\sqrt z(z^2-1)$ en Python. Vérifier que $h(4) = 42$."
+    "3. En réutilisant `g`, définir $h : z \\longmapsto 3z + \\sqrt z(z^2-1)$ en Python. Vérifier que $h(4) = 42$."
    ]
   },
-  
   {
    "cell_type": "markdown",
-   "id": "e28573e4",
-   "metadata": {},
+   "id": "74883331",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice 2**\n",
     "1. Définir la fonction $inv : x \\longmapsto \\frac{1}{x}$ en Python.\n",
     "2. En réutilisant `inv`, définir $f : x \\longmapsto \\frac{1}{1+x^2}$ en Python. Vérifier que $f(2) = 0.2$."
    ]
   },
-
   {
    "cell_type": "markdown",
-   "id": "0ade5b4b",
+   "id": "0e484bc1",
    "metadata": {},
    "source": [
-    "# Pourquoi écrire des fonctions?\n",
+    "## Pourquoi écrire des fonctions?\n",
     "\n",
     "Les fonctions offrent au moins 2 intérêts majeurs :\n",
     "- Elles permettent de réutiliser du code : appeller une fonction plutôt que réécrire plein de fois la même portion de code. En évitant de répéter un long bloc de code, on économise des lignes de code et on gagne en lisibilité.\n",
@@ -179,24 +187,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c3183fa",
+   "id": "31114959",
    "metadata": {},
    "source": [
-    "# Fonctions de plusieurs variables\n",
+    "## Fonctions de plusieurs variables\n",
     "\n",
     "Pour l'instant, on a utilisé fonctions ayant un seul argument. De façon générale, une fonction (en Python ou en mathématiques) peut avoir n'importe quel nombre d'arguments. Par exemple :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a67552ea",
+   "execution_count": 5,
+   "id": "bab8711d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:59.649571Z",
-     "iopub.status.busy": "2021-08-23T16:07:59.649216Z",
-     "iopub.status.idle": "2021-08-23T16:07:59.651354Z",
-     "shell.execute_reply": "2021-08-23T16:07:59.650997Z"
+     "iopub.execute_input": "2021-11-12T18:50:38.066696Z",
+     "iopub.status.busy": "2021-11-12T18:50:38.066171Z",
+     "iopub.status.idle": "2021-11-12T18:50:38.068672Z",
+     "shell.execute_reply": "2021-11-12T18:50:38.068241Z"
     }
    },
    "outputs": [],
@@ -207,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85f1441d",
+   "id": "e1cb0112",
    "metadata": {},
    "source": [
     "On utilise la fonction `somme` en donnant deux valeurs pour `x` et `y` (dans l'ordre), séparées par une virgule :"
@@ -215,14 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "09fff33e",
+   "execution_count": 6,
+   "id": "b83d75c1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:59.654076Z",
-     "iopub.status.busy": "2021-08-23T16:07:59.653757Z",
-     "iopub.status.idle": "2021-08-23T16:07:59.656160Z",
-     "shell.execute_reply": "2021-08-23T16:07:59.655805Z"
+     "iopub.execute_input": "2021-11-12T18:50:38.074465Z",
+     "iopub.status.busy": "2021-11-12T18:50:38.073329Z",
+     "iopub.status.idle": "2021-11-12T18:50:38.076681Z",
+     "shell.execute_reply": "2021-11-12T18:50:38.076173Z"
     }
    },
    "outputs": [
@@ -232,7 +240,7 @@
        "7"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1562e17",
+   "id": "6347e319",
    "metadata": {},
    "source": [
     "On peut bien sûr utiliser plus de variables : "
@@ -251,14 +259,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "c8bdaee6",
+   "execution_count": 7,
+   "id": "37677e0e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:59.659028Z",
-     "iopub.status.busy": "2021-08-23T16:07:59.658672Z",
-     "iopub.status.idle": "2021-08-23T16:07:59.660714Z",
-     "shell.execute_reply": "2021-08-23T16:07:59.661004Z"
+     "iopub.execute_input": "2021-11-12T18:50:38.086368Z",
+     "iopub.status.busy": "2021-11-12T18:50:38.085330Z",
+     "iopub.status.idle": "2021-11-12T18:50:38.087960Z",
+     "shell.execute_reply": "2021-11-12T18:50:38.088339Z"
     }
    },
    "outputs": [
@@ -268,7 +276,7 @@
        "6"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,10 +287,21 @@
     "somme3(1, 2, 3)"
    ]
   },
-  
   {
    "cell_type": "markdown",
-   "id": "1f39f9b9",
+   "id": "4d3deb8d",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
+    "**Exercice** : Définir une fonction `delta` telle que `delta(a, b, c)` renvoie le discriminant de l'équation $ax^2 + bx + c = 0$. Vérifier que le discriminant de $x^2 + 2x + 3$ est $-8$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90b06d54",
    "metadata": {},
    "source": [
     "# Fonctions prédéfinies\n",
@@ -291,14 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "5819716d",
+   "execution_count": 8,
+   "id": "a81a7a5c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:59.668471Z",
-     "iopub.status.busy": "2021-08-23T16:07:59.668131Z",
-     "iopub.status.idle": "2021-08-23T16:07:59.907069Z",
-     "shell.execute_reply": "2021-08-23T16:07:59.905527Z"
+     "iopub.execute_input": "2021-11-12T18:50:38.092825Z",
+     "iopub.status.busy": "2021-11-12T18:50:38.091983Z",
+     "iopub.status.idle": "2021-11-12T18:50:38.178447Z",
+     "shell.execute_reply": "2021-11-12T18:50:38.178943Z"
     }
    },
    "outputs": [
@@ -308,7 +327,7 @@
        "2.718281828459045"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,14 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "0cd2cb65",
+   "execution_count": 9,
+   "id": "85fd3525",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-23T16:07:59.918710Z",
-     "iopub.status.busy": "2021-08-23T16:07:59.916823Z",
-     "iopub.status.idle": "2021-08-23T16:07:59.924554Z",
-     "shell.execute_reply": "2021-08-23T16:07:59.923151Z"
+     "iopub.execute_input": "2021-11-12T18:50:38.182074Z",
+     "iopub.status.busy": "2021-11-12T18:50:38.181117Z",
+     "iopub.status.idle": "2021-11-12T18:50:38.187448Z",
+     "shell.execute_reply": "2021-11-12T18:50:38.188116Z"
     }
    },
    "outputs": [
@@ -338,7 +357,7 @@
        "0.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e6620e4",
+   "id": "bd22e26a",
    "metadata": {},
    "source": [
     "**Exercice** Définir la fonction sigmoïde $s : x \\longmapsto \\frac{1}{1+e^{-x}}$. En calculant $s(x)$ pour de grandes valeurs de $x$, conjecturer son comportement en $+\\infty$."
@@ -357,11 +376,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f5629f4f",
+   "execution_count": 10,
+   "id": "c781895b",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-12T18:50:38.191234Z",
+     "iopub.status.busy": "2021-11-12T18:50:38.190209Z",
+     "iopub.status.idle": "2021-11-12T18:50:38.196679Z",
+     "shell.execute_reply": "2021-11-12T18:50:38.197344Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999546021312976"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def s(x):\n",
+    "    return 1/(1 + np.exp(-x))\n",
+    "s(10) # s a l'air de tendre vers 1 en l'infini"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "474e1057",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Si on veut gagner du temps ou si on ne se souvient pas du nom de la fonction que l'on souhaite utiliser, on peut utiliser la touche Tab pour compléter automatiquement ce qu'on est en train d'écrire. On peut ensuite sélectionner la bonne fonction avec la touche Entrée :\n",
+    "\n",
+    "<center><img src=img/completion.png width=300/></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f230fce",
+   "metadata": {},
+   "source": [
+    "Il est possible d'obtenir de l'aide sur une fonction en cliquant dessus puis en appuyant sur les touches Shift+Tab (laisser appuyer sur Shift, puis appuyer sur Tab) :\n",
+    "\n",
+    "<center><img src=img/aide.png width=600/></center>\n"
+   ]
   }
  ],
  "metadata": {
@@ -369,6 +430,11 @@
    "cell_metadata_filter": "-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
